--- a/bio/ngs/workflows/variant_calling_gatk/config.json
+++ b/bio/ngs/workflows/variant_calling_gatk/config.json
@@ -1,6 +1,6 @@
 {
     "references": {
-        "genome": "path/to/genome.fasta"
+        "genome": "/fdb/GATK_resource_bundle/b37/human_g1k_v37.fasta"
     },
     "samples": {
         "A": ["A"],
@@ -8,16 +8,17 @@
     },
     "units": {
         "A":
-            ["path/to/A_R1.fastq.gz", "path/to/A_R2.fastq.gz"],
+            ["/data/cooperjam/Aplastic/NIH075_normal.bam"],
         "B":
-            ["path/to/B.fastq.gz"]
+            ["/data/cooperjam/Aplastic/NIH071_normal.bam"],
+
     },
     "known_variants": {
-        "dbsnp": "path/to/dbsnp.vcf",
-        "hapmap": "path/to/gatk_resources/hapmap_3.3.b37.vcf.gz",
-        "g1k": "path/to/gatk_resources/1000G_phase1.snps.high_confidence.b37.vcf.gz",
-        "omni": "path/to/gatk_resources/1000G_omni2.5.b37.vcf.gz",
-        "mills": "path/to/gatk_resources/Mills_and_1000G_gold_standard.indels.b37.vcf.gz"
+        "dbsnp": "/fdb/GATK_resource_bundle/b37-2.8/dbsnp_138.b37.vcf",
+        "hapmap": "/fdb/GATK_resource_bundle/b37-2.8/hapmap_3.3.b37.vcf",
+        "g1k": "/fdb/GATK_resource_bundle/b37-2.8/human_g1k_v37.fasta",
+        "omni": "/fdb/GATK_resource_bundle/b37-2.8/1000G_omni2.5.b37.vcf",
+        "mills": "/fdb/GATK_resource_bundle/b37-2.8/Mills_and_1000G_gold_standard.indels.b37.vcf"
     },
     "platform": "Illumina",
     "heterozygosity": 0.001,
