intial runs through snakemake cluster.  Not yet complete run through.

--- a/bio/ngs/workflows/variant_calling_gatk/Snakefile
+++ b/bio/ngs/workflows/variant_calling_gatk/Snakefile
@@ -45,7 +45,10 @@ __author__ = "Johannes Köster (http://johanneskoester.bitbucket.org)"
 __license__ = "MIT"
 
 
+
 configfile: "config.json"
+
+workdir: config['working_dir']
 
 include_prefix="/data/cooperjam/snakemake_workflows/Exome/GATK_germline_japan"
 
