--- a/bio/ngs/workflows/variant_calling_gatk/config.json
+++ b/bio/ngs/workflows/variant_calling_gatk/config.json
@@ -1,17 +1,13 @@
 {
     "references": {
-        "genome": "/fdb/GATK_resource_bundle/b37/human_g1k_v37.fasta"
+        "genome": "/fdb/igenomes/Homo_sapiens/Ensembl/GRCh37/Sequence/BWAIndex/genome.fa"
     },
     "samples": {
-        "A": ["A"],
-        "B": ["B"]
+        "NIH075_normal": ["NIH075_normal"]
     },
     "units": {
-        "A":
-            ["/data/cooperjam/Aplastic/NIH075_normal.bam"],
-        "B":
-            ["/data/cooperjam/Aplastic/NIH071_normal.bam"],
-
+        "NIH075_normal":
+            ["/data/cooperjam/Aplastic/NIH075_normal.bam"]
     },
     "known_variants": {
         "dbsnp": "/fdb/GATK_resource_bundle/b37-2.8/dbsnp_138.b37.vcf",
@@ -20,6 +16,9 @@
         "omni": "/fdb/GATK_resource_bundle/b37-2.8/1000G_omni2.5.b37.vcf",
         "mills": "/fdb/GATK_resource_bundle/b37-2.8/Mills_and_1000G_gold_standard.indels.b37.vcf"
     },
+    #"bwa_ref":"/fdb/igenomes/Homo_sapiens/Ensembl/GRCh37/Sequence/BWAIndex/genome.fa",
+    "working_dir":"/scratch/cooperjam/neal/japan",
+    "interval":"/data/cooperjam/intervals/Aligent_V4_V5_exome_padded_overlap_b37lifted.bed",
     "platform": "Illumina",
     "heterozygosity": 0.001,
     "indel_heterozygosity": 1.25E-4
