removed {reference}/unit from folder structure.  Will need to implement better folder structure to prevent ambigious rules.  Also modified all the get_ref to be more direct with config['reference']

--- a/bio/ngs/workflows/variant_calling_gatk/Snakefile
+++ b/bio/ngs/workflows/variant_calling_gatk/Snakefile
@@ -66,4 +66,4 @@ include:
 
 rule all:
     input:
-        "variant_calling/genome/all.snp_recalibrated.indel_recalibrated.vcf"
+        "variant_calling/all.snp_recalibrated.indel_recalibrated.vcf"
