--- a/bio/ngs/workflows/variant_calling_gatk/config.json
+++ b/bio/ngs/workflows/variant_calling_gatk/config.json
@@ -1,6 +1,9 @@
 {
+    "align_ref": {
+        "GRCh37": "/fdb/igenomes/Homo_sapiens/Ensembl/GRCh37/Sequence/BWAIndex/genome.fa"
+    },
     "references": {
-        "genome": "/fdb/igenomes/Homo_sapiens/Ensembl/GRCh37/Sequence/BWAIndex/genome.fa"
+        "GRCh37": "/fdb/GATK_resource_bundle/b37-2.8/human_g1k_v37.fasta"
     },
     "samples": {
         "NIH075_normal": ["NIH075_normal"]
@@ -16,7 +19,6 @@
         "omni": "/fdb/GATK_resource_bundle/b37-2.8/1000G_omni2.5.b37.vcf",
         "mills": "/fdb/GATK_resource_bundle/b37-2.8/Mills_and_1000G_gold_standard.indels.b37.vcf"
     },
-    #"bwa_ref":"/fdb/igenomes/Homo_sapiens/Ensembl/GRCh37/Sequence/BWAIndex/genome.fa",
     "working_dir":"/scratch/cooperjam/neal/japan",
     "interval":"/data/cooperjam/intervals/Aligent_V4_V5_exome_padded_overlap_b37lifted.bed",
     "platform": "Illumina",
