--- a/bio/ngs/workflows/variant_calling_gatk/config.json
+++ b/bio/ngs/workflows/variant_calling_gatk/config.json
@@ -17,6 +17,7 @@
         "hapmap": "/fdb/GATK_resource_bundle/b37-2.8/hapmap_3.3.b37.vcf",
         "g1k": "/fdb/GATK_resource_bundle/b37-2.8/human_g1k_v37.fasta",
         "omni": "/fdb/GATK_resource_bundle/b37-2.8/1000G_omni2.5.b37.vcf",
+        "1KG_indels":"/fdb/GATK_resource_bundle/b37-2.8/1000G_phase1.indels.b37.vcf ",
         "mills": "/fdb/GATK_resource_bundle/b37-2.8/Mills_and_1000G_gold_standard.indels.b37.vcf"
     },
     "working_dir":"/scratch/cooperjam/neal/japan",
@@ -25,3 +26,4 @@
     "heterozygosity": 0.001,
     "indel_heterozygosity": 1.25E-4
 }
+
